# NFLStats

./: CMakeLists.txt  GamesMenu.cpp  GamesMenu.h  MainMenu.cpp  MainMenu.h  README.md  ResultsMenu.cpp  ResultsMenu.h  SearchMenu.cpp  SearchMenu.h  StatsDatabase.cpp  StatsDatabase.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h  main.cpp
